--- a/sass/site.scss
+++ b/sass/site.scss
@@ -50,24 +50,24 @@ nav {
   gap: 2.5rem;
   padding: 1rem 0;
   border-bottom: 1px solid white;
-  
+
   .active {
     color: $tx-color-1;
     text-decoration: none;
   }
-  
+
   a {
     color: $tx-color-3;
     text-decoration: none;
   }
-  
+
   a:hover, a:focus {
     color: $tx-color-2;
     transition: 0.5s color ease-in-out;
   }
-  
-  
-  
+
+
+
 }
 
 header {
@@ -95,12 +95,12 @@ header {
     flex-direction: column;
     gap: 0.5rem;
     margin: 0 1rem;
-    
+
     h3 {
       margin-bottom: 0.5rem;
     }
   }
-  
+
   .summary {
     max-width: 80%;
   }
@@ -113,21 +113,26 @@ header {
   flex-direction: column;
   gap: 1.5rem;
   margin: 3rem auto;
-  
+
+  img {
+    display: block;
+    width: 100%;
+  }
+
   h1, h2, h3, h4, h5, h6 {
     margin: 1rem 0;
   }
-  
+
   h1 {
     font-size: 2.5rem;
   }
-  
+
   pre {
     padding: 1rem 1.5rem;
     border-radius: 0.25rem;
     overflow-x: wrap;
   }
-  
+
   .return-link {
     margin-top: 1.2rem;
   }
