Embed Inter font and slight typography tweak

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,9 @@
       <!--KaTeX-->
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css" integrity="sha384-vKruj+a13U8yHIkAyGgK1J3ArTLzrFGBbBc0tDp4ad/EyewESeXE/Iv67Aj8gKZ0" crossorigin="anonymous">
 
+      <!--Inter-->
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/inter.min.css">
+
   {% endblock css %}
 
 </head>
