--- a/sass/site.scss
+++ b/sass/site.scss
@@ -127,6 +127,10 @@ header {
     font-size: 2.5rem;
   }
 
+  p {
+    line-height: 1.6;
+  }
+
   pre {
     padding: 1rem 1.5rem;
     border-radius: 0.25rem;
