Minor punctuation fix

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,12 +11,12 @@
 </nav>
 <header>
   <h1>
-    Hi! I'm Jacky Song
+    Hi! I'm Jacky Song.
   </h1>
   <h2>
     A designer and developer with a passion for open source software
   </h2>
-  
+
   <section class="post-previews">
   {% for page in paginator.pages %}
     <article>
