--- a/sass/site.scss
+++ b/sass/site.scss
@@ -116,7 +116,8 @@ header {
 
   img {
     display: block;
-    width: 100%;
+    width: 50%;
+    margin: auto;
   }
 
   h1, h2, h3, h4, h5, h6 {
@@ -134,7 +135,12 @@ header {
   pre {
     padding: 1rem 1.5rem;
     border-radius: 0.25rem;
-    overflow-x: wrap;
+  }
+
+  code {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
   }
 
   .return-link {
