--- a/sass/site.scss
+++ b/sass/site.scss
@@ -1,3 +1,5 @@
+@import "screens";
+
 /* Fonts */
 $font-sans: Inter, Avenir, Helvetica, sans-serif;
 
@@ -33,11 +35,20 @@ html {
 
 body {
   width: 75%;
+  @include lg { width: 80%; }
+  @include sm { width: 100%; }
 	padding: 2rem;
 	background: $bg-color-1;
 	color: $tx-color-1;
 	line-height: 1.5;
 	@include center-x;
+}
+
+code {
+  background: #2b303b;
+  padding: 0.2rem 0.4rem;
+  border-radius: 0.25rem;
+  font-size: 0.8rem;
 }
 
 a {
@@ -109,6 +120,8 @@ header {
 // For full page articles
 .post {
   width: 70%;
+  @include lg { width: 90%; }
+  @include sm { width: 100%; }
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
@@ -117,6 +130,8 @@ header {
   img {
     display: block;
     width: 50%;
+    @include lg { width: 70%; }
+    @include sm { width: 100%; }
     margin: auto;
   }
 
@@ -137,7 +152,7 @@ header {
     border-radius: 0.25rem;
   }
 
-  code {
+  pre code {
     display: block;
     width: 100%;
     overflow-x: auto;
