Better link color

--- a/sass/site.scss
+++ b/sass/site.scss
@@ -7,7 +7,7 @@ $font-sans: Inter, Avenir, Helvetica, sans-serif;
 
 $bg-color-1: #252627; // Background
 $tx-color-1: #E5E9F0; // Primary
-$tx-color-2: #0070F3; // Link
+$tx-color-2: #0EA5E9; // Link
 $tx-color-3: #96989D; // Secondary
 
 /* General style resets */
