--- a/sass/site.scss
+++ b/sass/site.scss
@@ -5,10 +5,11 @@ $font-sans: Inter, Avenir, Helvetica, sans-serif;
 
 /* Colors */
 
-$bg-color-1: #252627; // Background
-$tx-color-1: #E5E9F0; // Primary
+$bg-color-1: #FFFFFF; // Background
+$tx-color-1: rgba(0, 0, 0, 0.8); // Primary
 $tx-color-2: #0EA5E9; // Link
-$tx-color-3: #96989D; // Secondary
+$tx-color-3: rgba(0, 0, 0, 0.3); // Secondary
+$tx-color-4: rgba(255, 255, 255, 0.8); // Code and code blocks
 
 /* General style resets */
 
@@ -40,8 +41,11 @@ body {
 	padding: 2rem;
 	background: $bg-color-1;
 	color: $tx-color-1;
-	line-height: 1.5;
 	@include center-x;
+}
+
+pre, code {
+	color: $tx-color-4;
 }
 
 code {
@@ -60,7 +64,7 @@ nav {
   flex-direction: row;
   gap: 2.5rem;
   padding: 1rem 0;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 
   .active {
     color: $tx-color-1;
@@ -82,7 +86,7 @@ nav {
 }
 
 header {
-  margin: 7rem 0;
+  margin: 5rem 0;
 
   h1 {
     font-size: 2.5rem;
@@ -90,7 +94,7 @@ header {
 
   h2 {
     font-size: 1.1rem;
-    margin: 0.5rem 0;
+    margin: 0.7rem 0;
   }
 }
 
@@ -110,6 +114,10 @@ header {
     h3 {
       margin-bottom: 0.5rem;
     }
+
+    p {
+      line-height: 1.5;
+    }
   }
 
   .summary {
@@ -122,10 +130,8 @@ header {
   width: 70%;
   @include lg { width: 90%; }
   @include sm { width: 100%; }
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-  margin: 3rem auto;
+  display: block;
+  margin: 5rem auto;
 
   img {
     display: block;
@@ -135,17 +141,22 @@ header {
     margin: auto;
   }
 
-  h1, h2, h3, h4, h5, h6 {
-    margin: 1rem 0;
+  h1, h2, h3, h4, h5 {
+      margin: 1.5rem 0;
+      line-height: 1.2;
   }
 
   h1 {
-    font-size: 2.5rem;
+  	font-size: 2rem;
   }
-
+  
   p {
-    line-height: 1.6;
+      margin: 2rem 0;
+      font-size: 1.06rem;
+      line-height: 1.7;
+      color: rgba(0, 0, 0, 0.8);
   }
+  
 
   pre {
     padding: 1rem 1.5rem;
