--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,15 @@
 </head>
 
 <body>
+
+  <nav>
+    <a href="/" class="active">Home</a>
+    <!--incomplete about page
+    <a href="about.html">About</a>
+    -->
+    <a href="https://github.com/Songtech-0912?tab=repositories">Projects</a>
+    <a href="https://github.com/Songtech-0912">GitHub</a>
+  </nav>
   {% block content %} {% endblock %}
 
   <script defer src="{{ get_url(path='katex/katex.min.js', trailing_slash=false) | safe }}"></script>
