--- a/sass/site.scss
+++ b/sass/site.scss
@@ -10,6 +10,7 @@ $tx-color-1: rgba(0, 0, 0, 0.8); // Primary
 $tx-color-2: #0EA5E9; // Link
 $tx-color-3: rgba(0, 0, 0, 0.3); // Secondary
 $tx-color-4: rgba(255, 255, 255, 0.8); // Code and code blocks
+$tx-color-5: rgba(0, 0, 0, 0.6); // Tertiary
 
 /* General style resets */
 
@@ -82,14 +83,15 @@ header {
   display: flex;
   flex-direction: column;
   margin: 5rem 0;
-  row-gap: 1.2rem;
+  row-gap: 1rem;
 
   h1 {
     font-size: 2.5rem;
   }
 
-  h2 {
+  p {
     font-size: 1.2rem;
+    color: $tx-color-5;
   }
 }
 
@@ -98,7 +100,7 @@ header {
   margin: 4rem 0;
   display: flex;
   flex-direction: column;
-  gap: 2.5rem;
+  row-gap: 1.5rem;
 
   article {
     display: flex;
@@ -106,7 +108,7 @@ header {
     gap: 0.5rem;
 
     p {
-      font-size: 1.06rem;
+      font-size: 1rem;
       line-height: 1.5;
     }
   }
@@ -142,7 +144,7 @@ header {
   }
 
   p, li {
-    font-size: 1.06rem;
+    font-size: 1rem;
     line-height: 1.7;
     color: rgba(0, 0, 0, 0.8);
   }
