Changed link color for better a11y

--- a/sass/site.scss
+++ b/sass/site.scss
@@ -7,7 +7,7 @@ $font-sans: Inter, Avenir, Helvetica, sans-serif;
 
 $bg-color-1: #FFFFFF; // Background
 $tx-color-1: rgba(0, 0, 0, 0.8); // Primary
-$tx-color-2: #0EA5E9; // Link
+$tx-color-2: #065C84; // Link
 $tx-color-3: rgba(0, 0, 0, 0.3); // Secondary
 $tx-color-4: rgba(255, 255, 255, 0.8); // Code and code blocks
 $tx-color-5: rgba(0, 0, 0, 0.6); // Tertiary
