--- a/sass/site.scss
+++ b/sass/site.scss
@@ -108,6 +108,10 @@ header {
     flex-direction: column;
     gap: 0.5rem;
 
+    h2 {
+      font-size: 1.125rem;
+    }
+
     p {
       font-size: 1rem;
       line-height: 1.5;
