Auto units and copy equation

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,9 @@
 
   <script defer src="{{ get_url(path='katex/katex.min.js', trailing_slash=false) | safe }}"></script>
   <script defer src="{{ get_url(path='katex/contrib/auto-render.min.js', trailing_slash=false) | safe }}"></script>
+  <script defer src="{{ get_url(path='katex/contrib/mhchem.min.js', trailing_slash=false) | safe }}"></script>
+  <script defer src="{{ get_url(path='katex/contrib/copy-tex.min.js', trailing_slash=false) | safe }}"></script>
+  
 
 <script>
     document.addEventListener("DOMContentLoaded", function() {
