--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     Hi! I'm Jacky Song.
   </h1>
   <p>
-    A designer and developer with a passion for open source software
+    A physicist, designer, and developer with a passion for open source software
   </p>
 </header>
 
