--- a/sass/site.scss
+++ b/sass/site.scss
@@ -177,7 +177,7 @@ header {
 
   img {
     display: block;
-    width: 50%;
+    width: 80%;
     @include lg { width: 70%; }
     @include sm { width: 100%; }
     margin: auto;
@@ -257,6 +257,11 @@ header {
   	tr {
   		border-bottom: 1px solid $border;
   	}
+
+    .footnote-definition {
+      display: flex;
+      flex-direction: row;
+    }
 }
 
 
