--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,13 @@
 <html lang="en">
 
 <head>
+  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="content-type" content="text/html; charset=utf-8"
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jacky Song</title>
+  <title>{{ page.title | default(value="Jacky Song") }}</title>
+  <meta name="description" content="{{ page.summary | default(value='Website of Jacky Song') | safe }}">
 
   {% block favicon %}
       <link rel="icon" type="image/svg+xml" href="{{ get_url(path="favicon.svg", trailing_slash=false) | safe }}">
