--- a/sass/site.scss
+++ b/sass/site.scss
@@ -180,8 +180,7 @@ header {
     width: 80%;
     @include lg { width: 70%; }
     @include sm { width: 100%; }
-    margin: auto;
-    margin-top: -1.5rem;
+    margin: 1.5rem auto;
   }
 
   .mathcell {
