Added inquiries section, revised homepage design

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,11 @@
 </header>
 
  <section class="post-previews">
+   <div class="contact">
+     <h2>Professional inquiries</h2>
+     <p>Interested in working with me or hiring me? See my resume, portfolio and contact information on
+     <a href="#">this info page &#x2192;</a></p>
+  </div>
  {% for page in section.pages %}
    <article>
      <h2>{{ page.title }}</h3>
