--- a/sass/site.scss
+++ b/sass/site.scss
@@ -67,12 +67,14 @@ nav {
   display: flex;
   flex-direction: row;
   gap: 2.5rem;
-  padding: 1rem 0;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  padding-top: 1rem;
+  // border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 
   a {
   	color: $tx-color-1;
     text-decoration: none;
+    color: $tx-color-5;
+    font-weight: 500;
   }
 
   a:hover, a:focus {
@@ -97,6 +99,22 @@ header {
     line-height: 1.5;
     color: $tx-color-5;
   }
+}
+
+.contact {
+	// border-bottom: 1px solid $tx-color-5;
+	padding-bottom: 1rem;
+
+  p {
+    line-height: 1.5;
+  }
+
+	h2 {
+		font-size: 1.4rem;
+		margin-bottom: 0.6rem;
+	}
+
+	
 }
 
 // For article previews on the main page
