--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta http-equiv="content-type" content="text/html; charset=utf-8"
+  <meta charset="UTF-8">
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ page.title | default(value="Jacky Song") }}</title>
