Improved syntax highlighting in code blocks

--- a/sass/site.scss
+++ b/sass/site.scss
@@ -10,9 +10,10 @@ $bg-color-1: #FFFFFF; // Background
 $tx-color-1: rgba(0, 0, 0, 0.8); // Primary
 $tx-color-2: #065C84; // Link
 $tx-color-3: rgba(0, 0, 0, 0.3); // Secondary
-$tx-color-4: rgba(255, 255, 255, 0.8); // Code and code blocks
 $tx-color-5: rgba(0, 0, 0, 0.6); // Tertiary
 $border: rgb(229,231,235);
+// Code and code block color schemes are
+// based on the syntax highlight theme
 
 /* General style resets */
 
@@ -48,12 +49,7 @@ body {
 	@include center-x;
 }
 
-pre, code {
-	color: $tx-color-4;
-}
-
 code {
-  background: #2b303b;
   padding: 0.2rem 0.4rem;
   border-radius: 0.25rem;
   font-size: 0.8rem;
@@ -277,6 +273,9 @@ header {
   pre {
     padding: 1rem;
     border-radius: 0.25rem;
+    // from tailwind's box-shadow shadow-sm class
+    // see https://tailwindcss.com/docs/box-shadow
+    box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   }
 
   pre code {
