--- a/templates/page.html
+++ b/templates/page.html
@@ -7,8 +7,9 @@
         
         <!-- table of contents -->
         {% if not page.extra.nonarticle %}
-        <details class="toc" open>
+        <details class="toc" id="toc" open>
         <summary>Table of contents</summary>
+        <p class="toc-info">Note: it is highly recommended to navigate by clicking links in the table of contents! It means you can use the back button in your browser to go back to any section you were reading, so you can jump back and forth between sections!</p>
         <div>
             <ul>
             {% for h2 in page.toc %}
@@ -32,6 +33,28 @@
 
         <!-- page content -->
         {{ page.content | safe }}
+        {% if not page.extra.nonarticle %}
+        <a id="jump-toc-btn" href="#toc">Show table of contents</a>
+        {% endif %}
         <a href="/" class="return-link">Back to home</a>
     </article>
+
+    <script>
+        var toc = document.getElementById("toc");
+        var tocPos = toc.offsetTop + toc.offsetHeight;
+        var tocBtn = document.getElementById("jump-toc-btn");
+        function showTocBtnOnScroll() {
+            // don't show toc button on print media
+            if (window.matchMedia('print').matches){ return; }
+            var scrollPosTop = document.documentElement.scrollTop;
+            // get bottom of viewport scroll position
+            if (scrollPosTop + window.innerHeight > tocPos) {
+                tocBtn.style.display = "block";
+            } else {
+                tocBtn.style.display = "none";
+            }
+        }
+        window.onscroll = showTocBtnOnScroll;
+        showTocBtnOnScroll();
+    </script>
 {% endblock content %}
