Improved inline code block CSS

--- a/sass/site.scss
+++ b/sass/site.scss
@@ -16,7 +16,8 @@ $border: rgb(229,231,235);
 // from tailwind's box-shadow shadow-sm class
 // see https://tailwindcss.com/docs/box-shadow
 $block-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px -1px rgba(0, 0, 0, 0.1);
-// Code and code block color schemes are
+$block-bg: #F7F7F7; // for inline code blocks
+// Code color schemes are
 // based on the syntax highlight theme
 
 /* General style resets */
@@ -121,6 +122,11 @@ header {
   display: flex;
   flex-direction: column;
   row-gap: 1.5rem;
+
+  .article-section-subtitle {
+    line-height: 1.5;
+    margin-bottom: 1rem;
+  }
 
   article {
     display: flex;
@@ -319,6 +325,13 @@ header {
       margin-bottom: 0.3rem;
   }
 
+  p code {
+    border-radius: 0.25rem;
+    box-shadow: $block-shadow;
+    background-color: $block-bg;
+  }
+
+  // code blocks
   pre {
     padding: 1rem;
     border-radius: 0.25rem;
