--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,8 @@
      <a href="/portfolio">this info page &#x2192;</a></p>
   </div>
   <h2>My articles</h2>
-  <p>
-  This is an index of mostly scientific and technical writing on my website.
+  <p class="article-section-subtitle">
+  This is an index of mostly scientific and technical writing on my website. You may also be interested in my collection of <a href="/notes">science & technical notes &#x2192;</a>.
   </p>
  {% for page in section.pages %}
   {% if not page.extra.nonarticle %}
