--- a/sass/site.scss
+++ b/sass/site.scss
@@ -251,10 +251,11 @@ header {
 
   img {
     display: block;
-    max-width: 80%;
-    max-height: 10rem;
+    max-width: 60%;
+    height: auto !important;
     @include lg { max-width: 70%; }
-    @include sm { max-width: 100%; }
+    @include sm { max-width: 75%; }
+    @include xsm { max-width: 80%; }
     margin: 1.5rem auto;
   }
 
