Change link to go back to notes index page

--- a/templates/page.html
+++ b/templates/page.html
@@ -36,7 +36,7 @@
         {% if not page.extra.nonarticle %}
         <a id="jump-toc-btn" href="#toc">Show table of contents</a>
         {% endif %}
-        <a href="/" class="return-link">Back to home</a>
+        <a href="/notes" class="return-link">Back to all notes</a>
     </article>
 
     <script>
