--- a/templates/page.html
+++ b/templates/page.html
@@ -3,10 +3,12 @@
 {% block content %}
     <article class="post">
         <h1>{{ page.title }}</h2>
+        {% if not page.extra.nonarticle %}
         <p id="print-notice">This page is print-friendly. Simply press Ctrl + P (or Command + P if you use a Mac) to print the page and download it as a PDF.</p>
+        {% endif %}
         
         <!-- table of contents -->
-        {% if not page.extra.nonarticle %}
+        {% if not page.extra.nonarticle and not page.extra.non_note and not page.extra.notoc %}
         <details class="toc" id="toc" open>
         <summary>Table of contents</summary>
         <p class="toc-info">Note: it is highly recommended to navigate by clicking links in the table of contents! It means you can use the back button in your browser to go back to any section you were reading, so you can jump back and forth between sections!</p>
@@ -33,10 +35,12 @@
 
         <!-- page content -->
         {{ page.content | safe }}
-        {% if not page.extra.nonarticle %}
+        {% if not page.extra.nonarticle and not page.extra.non_note %}
         <a id="jump-toc-btn" href="#toc">Show table of contents</a>
-        {% endif %}
         <a href="/notes" class="return-link">Back to all notes</a>
+        {% else %}
+        <a href="/" class="return-link">Back to home</a>
+        {% endif %}
     </article>
 
     <script>
