--- a/sass/site.scss
+++ b/sass/site.scss
@@ -352,12 +352,13 @@ header {
   }
 
   blockquote {
-	padding: 0.5rem 0 0.5rem 1rem;
-	border-left: 3px solid rgba(0, 0, 0, 0.3);
+	padding: 1.5rem 2rem 1.5rem 2rem;
+	border: 2px solid rgba(0,0,0,.5);
 
   	p {
 	    margin-bottom: 0;
 	    font-style: italic;
+      font-size: 0.95rem;
   	}
   }
 
