Add light of hope direct link

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,7 @@
     <a href="about.html">About</a>
     -->
     <a href="{{ get_url(path="@/notes.md") }}">Notes</a>
+    <a href="https://lightofhope.site/">Music</a>
     <a href="https://github.com/Songtech-0912">GitHub</a>
   </nav>
 
