Handle diagram path better

--- a/templates/shortcodes/natural_img.html
+++ b/templates/shortcodes/natural_img.html
@@ -1,1 +1,1 @@
-<img class="natural-img" src={{ src }} alt="{{ desc }}" />
+<img class="natural-img" src="{{ page.path ~ src }}" alt="{{ desc }}" />
