--- a/templates/shortcodes/diagram.html
+++ b/templates/shortcodes/diagram.html
@@ -1,1 +1,1 @@
-<img class="diagram" src={{ src }} {% if desc %}alt="{{desc}}"{% endif %} />
+<img class="diagram" src="{{ page.path ~ src }}" {% if desc %}alt="{{desc}}"{% endif %} />
