--- a/templates/page.html
+++ b/templates/page.html
@@ -16,12 +16,12 @@
             <ul>
             {% for h2 in page.toc %}
                 <li>
-                    <a href="{{ h2.permalink | safe }}">{{ h2.title }}</a>
+                    <a href="#{{ h2.id | safe }}">{{ h2.title }}</a>
                     {% if h2.children %}
                         <ul>
                             {% for h3 in h2.children %}
                                 <li>
-                                    <a href="{{ h3.permalink | safe }}">{{ h3.title }}</a>
+                                    <a href="#{{ h3.id | safe }}">{{ h3.title }}</a>
                                 </li>
                             {% endfor %}
                         </ul>
