--- a/templates/page.html
+++ b/templates/page.html
@@ -4,7 +4,8 @@
     <article class="post">
         <h1>{{ page.title }}</h2>
         {% if not page.extra.nonarticle %}
-        <p id="print-notice">This page is print-friendly. Simply press Ctrl + P (or Command + P if you use a Mac) to print the page and download it as a PDF.</p>
+        <p id="print-notice">This page is print-friendly. Simply press Ctrl + P (or Command + P if you use a Mac) to print the page and download it as a PDF. <a href="https://forms.gle/msb5wKErDJCjeL5k6">Report an issue or error here</a>.</p>
+
         {% endif %}
         
         <!-- table of contents -->
