More detailed notes info

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
   </div>
   <h2>My articles</h2>
   <p class="article-section-subtitle">
-  This is an index of mostly scientific and technical writing on my website. You may also be interested in my collection of <a href="/notes">scientific & technical notes &#x2192;</a>.
+  This is an index of mostly scientific and technical writing on my website. You may also be interested in my collection of 800+ pages of <a href="/notes">scientific & technical notes &#x2192;</a>.
   </p>
  {% for page in section.pages %}
   {% if not page.extra.nonarticle %}
