--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     Hi! I'm Jacky Song.
   </h1>
   <p>
-    An aspiring physicist, designer, and developer with a passion for open source software.
+    A computational physicist, designer, and developer with a passion for open source software.
   </p>
 </header>
 
@@ -14,7 +14,7 @@
    <div class="contact">
      <h2>Professional inquiries</h2>
      <p>Interested in working with me or hiring me? See my resume, portfolio and contact information on
-     <a href="/portfolio">this info page &#x2192;</a></p>
+     <a href="/portfolio">this page &#x2192;</a></p>
   </div>
   <h2>My articles</h2>
   <p class="article-section-subtitle">
